# pb-mapper

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER_README.md  LICENSE  Makefile  README.md  README.zh-CN.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: docker-publish.yml  release-ui.yml  release.yml  syntax-check.yml
backup/indextts-modifications/: QUICKSTART.md  pyproject.toml  setup.py  webui.py
backup/vibevoice-modifications/: README.md  quick_start.sh
docker/: docker-compose.yml  pb-mapper-server.dockerfile  server.dockerfile
docs/: bugfixes.md  bugfixes.zh-CN.md  pb-mapper-intro.zh-CN.md  rust-async-send-sync-pin-deep-dive.md  udp-datagram-forwarding.md  user-guide.md  user-guide.zh-CN.md  vibe-coding-everywhere-video-script.zh-CN.md  vibevoice-integration-spec.md
docs/assets/: architecture.excalidraw.json  vibe-coding-everywhere.pptx
examples/: echo_tcp_client.rs  echo_tcp_server.rs  echo_udp_client.rs  echo_udp_server.rs  pb_local_client.rs  pb_local_server.rs  pb_server.rs
local-tools/VibeVoice/: .gitignore  README.md  direct_usage_example.py  example_usage.sh  install.sh  pyproject.toml  quick_start.sh  run_demo.sh  test_tts_service.sh  tts_service.py
local-tools/VibeVoice/demo/: VibeVoice_colab.ipynb  gradio_demo.py  inference_from_file.py
local-tools/VibeVoice/vibevoice/configs/: qwen2.5_1.5b_64k.json  qwen2.5_7b_32k.json
local-tools/VibeVoice/vibevoice/modular/: configuration_vibevoice.py  modeling_vibevoice.py  modeling_vibevoice_inference.py  modular_vibevoice_diffusion_head.py  modular_vibevoice_text_tokenizer.py  modular_vibevoice_tokenizer.py
local-tools/VibeVoice/vibevoice/processor/: vibevoice_processor.py  vibevoice_tokenizer_processor.py
local-tools/VibeVoice/vibevoice/scripts/: convert_nnscaler_checkpoint_to_transformers.py
local-tools/index-tts/: .gitignore  DISCLAIMER  MANIFEST.in  README.md  config.json  install.sh  requirements.txt  start_webui.sh
local-tools/index-tts/input/: man_test1.m4a  woman_test1.m4a
local-tools/index-tts/tests/: cases.jsonl  padding_test.py  regression_test.py
scripts/: install-server-gitee.sh  install-server-github.sh
scripts/release/: pb-mapper-server-docker-image.sh  pb-mapper-server-x86-64-linux-musl-docker-image.sh  release-docker-image.sh  server-docker-image.sh
scripts/release/entrypoint/: pb-mapper-server.sh
services/: pb-mapper-server.service  readme.md
skills/pb-mapper-client-cli-deploy/: SKILL.md
skills/pb-mapper-client-cli-deploy/agents/: openai.yaml
skills/pb-mapper-release-pipeline/: SKILL.md
skills/pb-mapper-release-pipeline/agents/: openai.yaml
skills/pb-mapper-server-deploy/: SKILL.md
src/: lib.rs
src/common/: buffer.rs  checksum.rs  config.rs  conn_id.rs  error.rs  forward.rs  listener.rs  manager.rs  message.rs  mod.rs  stream.rs
src/common/message/: command.rs  forward.rs  mod.rs
src/local/client/: error.rs  mod.rs  status.rs  stream.rs
src/local/server/: error.rs  mod.rs  stream.rs
src/pb_server/: client.rs  error.rs  mod.rs  server.rs  status.rs
src/utils/: addr.rs  codec.rs  mod.rs  timeout.rs  udp.rs
tests/: .env  regression.rs  show_status.rs  test_delay.rs
ui/: .gitignore  Cargo.toml  Dioxus.toml  README.md  distribute_options.yaml  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/pb_mapper/ui/: MainActivity.kt
ui/assets/: README_ICON.md
ui/documentation/source/actor/: actor-model-en.md  actor-model-zh.md
ui/documentation/source/cpp26_sender_receiver/: A_Unified_Executors_Proposal_for_C++.md  P2300R10.md  Senders-Receivers.md
ui/ios/Flutter/: Release.xcconfig
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/src/common/: desktop_layout.dart  function.dart  log_manager.dart  responsive_layout.dart  theme_change_button.dart
ui/lib/src/common/tray/: tray_service.dart
ui/lib/src/ffi/: pb_mapper_api.dart  pb_mapper_ffi.dart  pb_mapper_service.dart
ui/lib/src/models/: client_config.dart  service_config.dart
ui/lib/src/views/: client_connection_page.dart  client_connection_view.dart  configuration_view.dart  log_display_widget.dart  log_view_button.dart  log_view_page.dart  main_landing_view.dart  server_management_page.dart  server_management_view.dart  service_registration_page.dart  service_registration_view.dart  status_monitoring_view.dart
ui/lib/src/widgets/: client_card.dart  edit_service_dialog.dart  service_card.dart
ui/linux/: CMakeLists.txt
ui/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
ui/native/: README.md
ui/native/hub/: Cargo.toml
ui/native/hub/src/: lib.rs
ui/native/hub/src/actors/: counting.rs  mod.rs  pb_mapper_actor.rs  performing.rs
ui/native/hub/src/signals/: app_control.rs  log_collector.rs  mod.rs  server_signals.rs
ui/native/pb_mapper_ffi/: Cargo.toml
ui/native/pb_mapper_ffi/src/: client.rs  config.rs  handle.rs  lib.rs  logging.rs  response.rs  server.rs  service.rs  state.rs
ui/native/sample_crate/src/: extras.rs  fractal.rs
ui/snap/gui/: app_icon.desktop
ui/src/: main.rs
ui/src/components/: echo.rs  hero.rs
ui/test/: log_manager_test.dart  widget_test.dart
ui/web/: manifest.json
ui/windows/: CMakeLists.txt
ui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ui/windows/packaging/exe/: inno_setup.iss  inno_setup.sas  make_config.yaml
ui/windows/packaging/zip/: make_config.yaml
ui/windows/runner/: Runner.rc
