[package]
name = "pb-mapper"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
socket2.workspace = true
tokio.workspace = true
snafu.workspace = true
flume.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hashbrown.workspace = true
clap.workspace = true
futures.workspace = true
mimalloc-rust.workspace = true
bytes.workspace = true
trust-dns-resolver.workspace = true
ring.workspace = true

[dev-dependencies]
dotenvy = "0.15.7"

[features]
udp-timeout = []

[workspace]
members = ["ui"]

[workspace.package]
version = "0.1.0"
authors = ["L_B__"]
edition = "2021"

[workspace.dependencies]
rand = "0.9.2"
socket2 = "0.6.0"
tokio = { version = "1", features = ["full"] }
snafu = "0.8.7"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
], default-features = true }
hashbrown = { version = "0.15.5" }
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.31"
mimalloc-rust = "0.2"
bytes = "1.10.1"
trust-dns-resolver = { version = "0.23.2" }
ring = "0.17.14"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
