[package]
name = "pb-mapper"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
socket2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hashbrown.workspace = true
clap.workspace = true
futures.workspace = true
better_mimalloc_rs.workspace = true
bytes.workspace = true
trust-dns-resolver.workspace = true
ring.workspace = true
once_cell.workspace = true
uni-stream.workspace = true
kanal.workspace = true

[dev-dependencies]
dotenvy = "0.15.7"

[features]
udp-timeout = ["uni-stream/udp-timeout"]

[workspace]
members = ["ui/native/pb_mapper_ffi"]
exclude = ["deps/uni-stream", "deps/kanal"]

[workspace.package]
version = "0.2.1"
authors = ["L_B__"]
edition = "2021"

[workspace.dependencies]
rand = "0.10"
socket2 = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
snafu = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
], default-features = true }
hashbrown = { version = "0.16" }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
better_mimalloc_rs = { version = "0.1.1", features = ["config"] }
bytes = "1.11"
trust-dns-resolver = { version = "0.23.2" }
ring = "0.17.14"
once_cell = "1.20.2"
uni-stream = { git = "https://github.com/acking-you/uni-stream.git", branch = "master" }
kanal = { git = "https://github.com/acking-you/kanal.git", branch = "dev/pb-mapper" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
