[package]
name = "pb-mapper-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
better_mimalloc_rs.workspace = true
tokio-util = "0.7"
dirs = "5.0"

pb-mapper = { path = "../../../" }
uni-stream.workspace = true
